# autoconf-rs

./: .RULES  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  STATUS.md  autoconf  conf_subst.sed  configure.ac
crates/autoconf-casefile-rs/: Cargo.toml
crates/autoconf-casefile-rs/src/: lib.rs
crates/autoconf-oracle-rs/: Cargo.toml
crates/autoconf-oracle-rs/src/: lib.rs
crates/autoconf-rs-cli/: Cargo.toml
crates/autoconf-rs-cli/src/: bin_autoconf.rs  bin_autoheader.rs  lib.rs  main_aclocal.rs  main_autoconf.rs  main_autoheader.rs  main_autom4te.rs  main_autoreconf.rs  main_autoscan.rs  main_autoupdate.rs  main_ifnames.rs
crates/autoconf-rs-core/: Cargo.toml  configure.scan
crates/autoconf-rs-core/src/: ac_script.sed  aclocal.rs  args.rs  autoconf_macros.rs  autoheader.rs  autom4te.rs  autoreconf.rs  builtin.rs  cache.rs  configure_ac.rs  configure_body.rs  configure_template.rs  diagnostics.rs  diversion.rs  expansion.rs  fortran.rs  frozen.rs  i18n.rs  input_validate.rs  languages.rs  lexer.rs  lib.rs  m4_engine.rs  m4sh.rs  m4sh_init.rs  m4sugar.rs  macro_table.rs  profile.rs  shell_gen.rs  signal.rs  site_file.rs  template.rs  token.rs  trace.rs  trace_cache.rs
crates/autoconf-rs-core/src/templates/: canonical_build.sh  canonical_config_sub.sh  canonical_host.sh  config_log.sh  config_status.sh  fixture_05_functions_template.sh  full_configure_template.sh  help_version.sh  option_parsing.sh  prologue_template.sh  smoke_02_subst_template.sh  smoke_02_template.sh  smoke_03_template.sh
crates/autoconf-rs-core/tests/: ac_require_diversion.rs  ac_require_stress.rs  advanced_features.rs  autoconf_core_comprehensive.rs  binary_smoke.rs  brutal_fixtures.rs  byte_exact_extended.rs  cli_integration.rs  config_status.rs  configure_script_comprehensive.rs  cross_040_041_046.rs  deep_fuzz_1m.rs  diagnostic_integration.rs  diagnostics_comprehensive.rs  function_check_comprehensive.rs  header_type_comprehensive.rs  hostile_fuzz.rs  integration_macros.rs  language_oracle.rs  layer1_gnu.rs  layer2_manual.rs  layer3_posix.rs  layer5_stress.rs  m4_engine_comprehensive.rs  m4_engine_deep.rs  m4_engine_integration.rs  m4_engine_macros.rs  m4sh_comprehensive.rs  m4sugar_comprehensive.rs  oracle_binary_admission.rs  oracle_compare.rs  oracle_cross_version.rs  oracle_fuzz_scale.rs  oracle_guided_fuzz.rs  oracle_health.rs  oracle_matrix.rs  oracle_progressive.rs  oracle_regression.rs  perf_cross_compile.rs  pipeline_e2e.rs  (+11 more)
docs/: MIGRATION.md  ORACLE-PINNING.md  REVIEW-IN-10-MINUTES.md  forensic-atlas.md  negative-capabilities.md
fixtures/configure_ac/: full_featured.ac  with_prog_cc.ac
kani/: Cargo.toml  diversion_proofs.rs  prusti_diversion.rs  prusti_require.rs  trace_proofs.rs
kani/src/: fast_proofs.rs  main.rs
lab/corpus/expected_output/: complex_headers_template.sh  complex_programs_template.sh  config_status_template.sh  full_configure_template.sh  prologue_template.sh  smoke_01_minimal_oracle.sh  smoke_03_headers_oracle.sh
lab/corpus/hostile/: hostile_01_nesting.ac  hostile_02_quoting.ac  hostile_03_empty.ac  hostile_04_special_chars.ac  hostile_05_recursive_require.ac  hostile_quote_depth.ac
lab/corpus/layer0-smoke/: fixture_04_programs.ac  fixture_05_functions.ac  fixture_06_headers_types.ac  smoke_01_minimal.ac  smoke_02_subst.ac  smoke_03_headers.ac
lab/corpus/layer1-gnu-testsuite/: acc_at.ac  acdiag_at.ac  acfortran_at.ac  acgeneral_at.ac  acspecific_at.ac  ahtemp_001.ac  ahtemp_002.ac  ahtemp_003.ac  ahtemp_004.ac  ahtemp_005.ac  ahtemp_006.ac  ahtemp_007.ac  ahtemp_008.ac  ahtemp_009.ac  ahtemp_010.ac  align.at.ac  arconf_000.ac  arconf_001.ac  arconf_002.ac  arconf_003.ac  arconf_004.ac  arconf_005.ac  arconf_006.ac  arconf_007.ac  arconf_008.ac  arconf_009.ac  arconf_010.ac  arconf_011.ac  arconf_012.ac  arconf_013.ac  arconf_014.ac  arconf_015.ac  arconf_016.ac  arconf_017.ac  arconf_018.ac  arconf_019.ac  arconf_020.ac  arconf_021.ac  arconf_022.ac  arconf_023.ac  (+1041 more)
lab/corpus/layer2-manual-examples/: ex01_basic_init.ac  ex02_substitutions.ac  ex03_defines.ac  ex04_function_checks.ac  ex05_header_checks.ac  ex06_library_checks.ac  (+9 more)
man/: aclocal.1  autoconf.1  autoheader.1  autom4te.1  autoreconf.1  autoscan.1  autoupdate.1  ifnames.1
reports/: FORENSIC-GAP-ANALYSIS.md  NEEDLE-REPORT.md  claim-ladder.json  doc-registry.json  oracle-profile.json  parity-report.json
reports/receipts/: cleanroom-receipt.json  fuzz-1M-receipt.json
reports/vm-survival-receipts/: README.md  aggregate.json  almalinux.json  debian.json  fedora.json  opensuse.json  ubuntu.json
sources/atlas/: forensic-atlas.json
sources/docs/: forensic-atlas.json  status.json
sources/gaps/: master-gap-analysis.json  needle-metrics.json
sources/negcaps/: structured-negative-capabilities.json
src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: ast_verify.rs  bench.rs  cleanroom.rs  compare.rs  consistency.rs  fuzz.rs  gnu_compare.rs  main.rs  rules_gate.rs  smoke.rs  truth.rs
xtask/src/docgen/: dsse.rs  generate.rs  mod.rs  sync_metrics.rs
(+14 files in other folders)
