[package]
name = "autoconf-rs"
version = "0.1.6"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"
keywords = ["autoconf", "configure", "m4", "build-system", "gnu"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "autoconf-rs"
path = "src/main.rs"

[dependencies]
autoconf-rs-core = { version = "0.1.32", path = "crates/autoconf-rs-core" }
autoconf-oracle-rs = { version = "0.1.0", path = "crates/autoconf-oracle-rs" }
autoconf-casefile-rs = { version = "0.1.0", path = "crates/autoconf-casefile-rs" }
autoconf-rs-cli = { version = "0.1.38", path = "crates/autoconf-rs-cli" }

[workspace]
resolver = "2"
members = [
    "crates/autoconf-rs-core",
    "crates/autoconf-rs-cli",
    "crates/autoconf-oracle-rs",
    "crates/autoconf-casefile-rs",
    "xtask",
    "kani",
]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/infinityabundance/autoconf-rs"
authors = ["infinityabundance <255699974+infinityabundance@users.noreply.github.com>"]
description = "Forensic-parity Rust reimplementation of GNU Autoconf behavior through oracle courts."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"




[patch.crates-io]
m4-rs-core = { path = "/home/one/m4-rs/crates/m4-rs-core" }
