[package]
name = "autoconf-rs-cli"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI harness for autoconf-rs tools: autoconf, autoheader, autom4te, autoreconf, aclocal, autoscan, autoupdate, ifnames"

[[bin]]
name = "autoconf"
path = "src/main_autoconf.rs"

[[bin]]
name = "autoheader"
path = "src/main_autoheader.rs"

[[bin]]
name = "autom4te"
path = "src/main_autom4te.rs"

[[bin]]
name = "autoreconf"
path = "src/main_autoreconf.rs"

[[bin]]
name = "aclocal"
path = "src/main_aclocal.rs"

[[bin]]
name = "autoscan"
path = "src/main_autoscan.rs"

[[bin]]
name = "autoupdate"
path = "src/main_autoupdate.rs"

[[bin]]
name = "ifnames"
path = "src/main_ifnames.rs"

[dependencies]
autoconf-rs-core = { version = "0.1.4", path = "../autoconf-rs-core" }
